# HelpTree

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  run-all-examples.sh
c/: Makefile  README.md
c/examples/: basic.c  deep.c  hidden.c
c/src/: help_tree.c  help_tree.h
cpp/: CMakeLists.txt  README.md
cpp/examples/: basic.cpp  deep.cpp  hidden.cpp
cpp/src/: help_tree.hpp
crystal/: README.md  shard.yml
crystal/examples/: basic.cr  deep.cr  hidden.cr
crystal/src/: help_tree.cr
csharp/: HelpTree.cs  HelpTree.csproj  README.md
csharp/examples/basic/: Program.cs  basic.csproj
csharp/examples/deep/: Program.cs  deep.csproj
csharp/examples/hidden/: Program.cs
docs/: config-schema.md  specification.md
go/: README.md  go.mod
go/examples/basic/: go.mod  main.go
go/examples/deep/: go.mod  main.go
go/examples/hidden/: go.mod  main.go
go/help-tree/: help-tree.go  theme.go
haskell/: README.md  help-tree.cabal
haskell/examples/: Basic.hs  Deep.hs  Hidden.hs  help-tree.json
haskell/src/: HelpTree.hs
java/: README.md  build.gradle  settings.gradle
java/src/main/java/helptree/: HelpTree.java  Theme.java  TreeArgument.java  TreeCommand.java  TreeOption.java
java/src/main/java/helptree/examples/: Basic.java  Deep.java  Hidden.java
julia/: README.md
julia/examples/: basic.jl  deep.jl  hidden.jl
julia/src/: HelpTree.jl
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/helptree/: HelpTree.kt
lua/: README.md
lua/examples/: basic.lua  deep.lua  hidden.lua
lua/src/: help_tree.lua
nim/: README.md  help_tree.nimble
nim/examples/: basic.nim  deep.nim  hidden.nim
nim/nimbledeps/: nimbledata2.json
nim/src/: help_tree.nim
ocaml/: Makefile  README.md
ocaml/examples/: basic.cmi  basic.cmo  basic.ml  deep.cmi  deep.cmo  deep.ml  hidden.cmi  hidden.cmo  hidden.ml
ocaml/src/: help_tree.cmi  help_tree.cmo  help_tree.ml  help_tree.mli
python/: README.md  pyproject.toml
python/examples/: basic.py  deep.py  help-tree.json  hidden.py
python/help_tree/: __init__.py
ruby/: Gemfile  README.md  help_tree.gemspec
ruby/examples/: basic.rb  deep.rb  hidden.rb
ruby/lib/: help_tree.rb
rust/: Cargo.toml  README.md
rust/crates/help-tree/: Cargo.toml
rust/crates/help-tree/examples/: basic.rs  deep.rs  help-tree.toml  hidden.rs
rust/crates/help-tree/src/: lib.rs
swift/: Package.swift  README.md
swift/Examples/Basic/: Basic.swift
swift/Examples/Deep/: Deep.swift
swift/Examples/Hidden/: Hidden.swift
swift/Sources/HelpTree/: HelpTree.swift
tests/fixtures/: canonical.json  canonical.text
typescript/: README.md  package-lock.json  package.json
typescript/examples/: basic.ts  deep.ts  help-tree.json  hidden.ts
typescript/src/: index.ts
zig/: README.md  build.zig  build.zig.zon
zig/examples/: basic.zig  deep.zig  hidden.zig
zig/src/: help_tree.zig
(+3 files in other folders)
