cabal-version: 3.0
name: help-tree
version: 0.1.0
synopsis: Introspective --help-tree for optparse-applicative-based CLIs
description:
  Adds --help-tree to optparse-applicative command-line interfaces
  with ANSI themes, JSON output, depth limits, and config file support.
license: MIT
author: HelpTree Contributors

library
  exposed-modules: HelpTree
  hs-source-dirs: src
  build-depends:
    base >= 4.14 && < 5,
    aeson >= 2.0,
    bytestring >= 0.11,
    optparse-applicative >= 0.17,
    text >= 1.2,
    ansi-terminal >= 0.11,
  default-language: Haskell2010
  ghc-options: -Wall

executable basic
  main-is:             Basic.hs
  hs-source-dirs:      examples
  build-depends:
    base,
    help-tree,
    optparse-applicative,
  default-language:    Haskell2010

executable deep
  main-is:             Deep.hs
  hs-source-dirs:      examples
  build-depends:
    base,
    help-tree,
    optparse-applicative,
  default-language:    Haskell2010

executable hidden
  main-is:             Hidden.hs
  hs-source-dirs:      examples
  build-depends:
    base,
    help-tree,
    optparse-applicative,
  default-language:    Haskell2010
