[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "help-tree"
version = "0.1.0"
description = "Introspective --help-tree for argparse-based CLIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.hatch.build.targets.wheel]
packages = ["help_tree"]
