[package]
name = "help-tree"
version = "0.1.0"
edition = "2021"
description = "Introspective --help-tree for clap-based CLIs"
license = "MIT"
repository = "https://github.com/yourname/help-tree"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
